--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lite": "lite-server",
     "typings": "typings",
     "postinstall": "typings install",
-    "gulp": "gulp"
+    "gulp": "gulp",
+    "tslint": "tslint -c tslint.json app/**/*.ts"
   },
   "license": "ISC",
   "dependencies": {
@@ -25,11 +26,15 @@
     "concurrently": "^2.0.0",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
+    "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-replace-task": "^0.11.0",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-tslint": "^4.3.4",
     "gulp-typescript": "^2.12.1",
+    "gulp-watch": "^4.3.5",
     "lite-server": "^2.1.0",
+    "tslint": "^3.7.1",
     "typescript": "^1.8.7",
     "typings": "^0.7.5"
   }
