- Move config into different file and replace by gulp - add css file into package

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "concurrently": "^2.0.0",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
+    "gulp-environments": "^0.1.1",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-replace-task": "^0.11.0",
