Add tslint and fix tslint errors

--- a/package.json
+++ b/package.json
@@ -36,7 +36,11 @@
     "gulp-typescript": "^2.12.1",
     "gulp-watch": "^4.3.5",
     "lite-server": "^2.1.0",
-    "tslint": "^3.7.1",
+    "ng2lint": "0.0.10",
+    "stylelint": "^5.3.0",
+    "stylelint-config-standard": "^5.0.0",
+    "tslint": "^3.7.0-dev.2",
+    "tslint-stylish": "2.1.0-beta",
     "typescript": "^1.8.7",
     "typings": "^0.7.5"
   }
