--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gulp-watch": "^4.3.5",
     "lite-server": "^2.1.0",
     "ng2lint": "0.0.10",
+    "run-sequence": "^1.1.5",
     "stylelint": "^5.3.0",
     "stylelint-config-standard": "^5.0.0",
     "tslint": "^3.7.0-dev.2",
