--- a/gulpconfig.json
+++ b/gulpconfig.json
@@ -5,18 +5,14 @@
   "configFileProd" : "./config/config-prd.json",
   "staticFiles" : [
     "index.html",
-    "*.css"
+    "*.css",
+    "systemjs.config.js"
   ],
   "libs" : [
-      "node_modules/es6-shim/es6-shim.min.js",
-      "node_modules/systemjs/dist/system-polyfills.js",
-      "node_modules/angular2/es6/dev/src/testing/shims_for_IE.js",
-      "node_modules/angular2/bundles/angular2-polyfills.js",
+      "node_modules/zone.js/dist/zone.js",
+      "node_modules/reflect-metadata/Reflect.js",
       "node_modules/systemjs/dist/system.src.js",
-      "node_modules/rxjs/bundles/Rx.js",
-      "node_modules/angular2/bundles/angular2.dev.js",
-      "node_modules/angular2/bundles/router.dev.js",
-      "node_modules/angular2/bundles/http.dev.js",
+      "node_modules/angular2-jwt/angular2-jwt.js",
       "node_modules/bootstrap/dist/css/bootstrap.min.css"
   ]
 }
