--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "gulp serve",
+    "starttsc": "tsc && concurrently \"tsc -w\" \"lite-server\" ",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "lite": "lite-server",
@@ -13,18 +14,33 @@
   },
   "license": "ISC",
   "dependencies": {
-    "angular2": "2.0.0-beta.9",
+    "@angular/common": "2.0.0-rc.4",
+    "@angular/compiler": "2.0.0-rc.4",
+    "@angular/core": "2.0.0-rc.4",
+    "@angular/forms": "0.2.0",
+    "@angular/http": "2.0.0-rc.4",
+    "@angular/platform-browser": "2.0.0-rc.4",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
+    "@angular/router": "3.0.0-beta.1",
+    "@angular/router-deprecated": "2.0.0-rc.2",
+    "@angular/upgrade": "2.0.0-rc.4",
+    "angular2-in-memory-web-api": "0.0.14",
+    "angular2-jwt": "^0.1.16",
+    "auth0-lock": "^10.0.0-rc.2",
     "bootstrap": "^3.3.6",
-    "es6-promise": "^3.0.2",
-    "es6-shim": "^0.33.3",
-    "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.2",
-    "systemjs": "0.19.24",
-    "zone.js": "0.5.15"
+    "core-js": "^2.4.0",
+    "reflect-metadata": "^0.1.3",
+    "rxjs": "5.0.0-beta.6",
+    "systemjs": "0.19.27",
+    "zone.js": "^0.6.12"
   },
   "devDependencies": {
-    "browser-sync": "^2.11.2",
     "concurrently": "^2.0.0",
+    "lite-server": "^2.2.0",
+    "typescript": "^1.8.10",
+    "typings": "^1.0.4",
+    "canonical-path": "0.0.2",
+    "http-server": "^0.9.0",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-environments": "^0.1.1",
@@ -35,14 +51,12 @@
     "gulp-tslint": "^4.3.4",
     "gulp-typescript": "^2.12.1",
     "gulp-watch": "^4.3.5",
-    "lite-server": "^2.1.0",
     "ng2lint": "0.0.10",
     "run-sequence": "^1.1.5",
     "stylelint": "^5.3.0",
     "stylelint-config-standard": "^5.0.0",
     "tslint": "^3.7.0-dev.2",
-    "tslint-stylish": "2.1.0-beta",
-    "typescript": "^1.8.7",
-    "typings": "^0.7.5"
-  }
+    "tslint-stylish": "2.1.0-beta"
+  },
+  "repository": {}
 }
