--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,21 @@
 {
   "compilerOptions": {
     "target": "es6",
-    "module": "system",
+    "module": "commonjs",
     "moduleResolution": "node",
     "sourceMap": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": false,
     "noImplicitAny": false,
-    "compileOnSave": false,
-    "outDir": "./build"
+    "suppressImplicitAnyIndexErrors": true,
+    "noImplicitUseStrict": false,
+    "noFallthroughCasesInSwitch": true,
+
+    "outDir": "./dist"
   },
   "exclude": [
     "node_modules",
-    "typings/main",
-    "typings/main.d.ts"
+    "typings"
   ]
 }
