--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "angular2-jwt": "^0.1.16",
     "auth0-lock": "^10.0.0-rc.2",
     "bootstrap": "^3.3.6",
+    "browser-sync": "^2.14.0",
     "core-js": "^2.4.0",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
