--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -17,7 +17,15 @@ http {
     location / {
       root			/squote-web;
     }
-  }  
+  }
+  
+  server {
+    listen 80;
+    server_name api.funfunspell.com;
+    location / {
+      proxy_pass                http://web-parser-rest:8091;
+    }
+  }
 
   server {
     listen 80;
