--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -5,7 +5,7 @@ events {
 http {
   server {
     listen 80;
-    server_name squote.no-ip.org squote.funfunspell.com;
+    server_name squote.*;
     location / {
       proxy_pass                http://squote:8090;
     }
@@ -13,7 +13,7 @@ http {
 
   server {
     listen 80;
-    server_name squote-web.funfunspell.com;
+    server_name squote-web.*;
     location / {
       root			/squote-web;
     }
@@ -21,15 +21,15 @@ http {
   
   server {
     listen 80;
-    server_name api.funfunspell.com;
+    server_name api.*;
     location / {
       proxy_pass                http://web-parser-rest:8091;
     }
   }
 
   server {
-    listen 80;
-    server_name *.no-ip.org thc-do.no-ip.org *.funfunspell.com funfunspell.com;
+    listen 80 default_server;
+    server_name "";
     location / {
       proxy_pass                http://esl:8080;
     }
