--- a/package.json
+++ b/package.json
@@ -1,18 +1,14 @@
 {
-  "name": "squote-web",
+  "name": "angular2-webpack",
   "version": "1.0.0",
+  "description": "A webpack starter for angular 2",
   "scripts": {
-    "start": "gulp serve",
-    "starttsc": "tsc && concurrently \"tsc -w\" \"lite-server\" ",
-    "tsc": "tsc",
-    "tsc:w": "tsc -w",
-    "lite": "lite-server",
-    "typings": "typings",
-    "postinstall": "typings install",
-    "gulp": "gulp",
-    "tslint": "tslint -c tslint.json app/**/*.ts"
+    "start": "webpack-dev-server --inline --progress --port 8080",
+    "test": "karma start",
+    "build": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail",
+    "postinstall": "typings install"
   },
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@angular/common": "2.0.0-rc.5",
     "@angular/compiler": "2.0.0-rc.5",
@@ -22,42 +18,34 @@
     "@angular/platform-browser": "2.0.0-rc.5",
     "@angular/platform-browser-dynamic": "2.0.0-rc.5",
     "@angular/router": "3.0.0-rc.1",
-    "@angular/router-deprecated": "2.0.0-rc.2",
-    "@angular/upgrade": "2.0.0-rc.5",
-    "angular2-in-memory-web-api": "^0.0.15",
-    "angular2-jwt": "^0.1.16",
-    "auth0-lock": "^10.0.0-rc.2",
-    "bootstrap": "^3.3.6",
-    "browser-sync": "^2.14.0",
     "core-js": "^2.4.0",
-    "reflect-metadata": "^0.1.3",
+    "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.6",
-    "systemjs": "0.19.27",
-    "zone.js": "^0.6.12"
+    "zone.js": "0.6.12"
   },
   "devDependencies": {
-    "concurrently": "^2.0.0",
-    "lite-server": "^2.2.0",
+    "angular2-template-loader": "^0.4.0",
+    "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
+    "html-loader": "^0.4.3",
+    "html-webpack-plugin": "^2.15.0",
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.22",
+    "karma-jasmine": "^0.3.8",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.7.0",
+    "null-loader": "^0.1.1",
+    "phantomjs-prebuilt": "^2.1.7",
+    "raw-loader": "^0.5.1",
+    "rimraf": "^2.5.2",
+    "style-loader": "^0.13.1",
+    "ts-loader": "^0.8.1",
     "typescript": "^1.8.10",
     "typings": "^1.0.4",
-    "canonical-path": "0.0.2",
-    "http-server": "^0.9.0",
-    "del": "^2.2.0",
-    "gulp": "^3.9.1",
-    "gulp-environments": "^0.1.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-replace": "^0.5.4",
-    "gulp-replace-task": "^0.11.0",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-tslint": "^4.3.4",
-    "gulp-typescript": "^2.12.1",
-    "gulp-watch": "^4.3.5",
-    "ng2lint": "0.0.10",
-    "run-sequence": "^1.1.5",
-    "stylelint": "^5.3.0",
-    "stylelint-config-standard": "^5.0.0",
-    "tslint": "^3.7.0-dev.2",
-    "tslint-stylish": "2.1.0-beta"
-  },
-  "repository": {}
+    "webpack": "^1.13.0",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-merge": "^0.14.0"
+  }
 }
