--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -29,6 +29,12 @@ http {
 
   server {
     listen 80 default_server;
+    server_name funfunspell.com;
+    return 301 $scheme://www.funfunspell.com$request_uri;
+  }
+  
+  server {
+    listen 80 default_server;
     server_name "";
     location / {
       proxy_pass                http://esl:8080;
