--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -28,7 +28,7 @@ http {
   }
 
   server {
-    listen 80 default_server;
+    listen 80;
     server_name funfunspell.com;
     return 301 $scheme://www.funfunspell.com$request_uri;
   }
