--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -36,6 +36,8 @@ http {
   server {
     listen 80 default_server;
     server_name "";
+    rewrite  ^/$  /ESL/index.jsf  permanent;
+    
     location / {
       proxy_pass                http://esl:8080;
     }
