--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,11 @@
     "experimentalDecorators": true,
     "removeComments": false,
     "noImplicitAny": true,
-    "suppressImplicitAnyIndexErrors": true
-  }
+    "suppressImplicitAnyIndexErrors": true,
+    "noLib": false
+  },
+  "exclude": [
+    "node_modules",
+    "typings"
+  ]
 }
