remove esl context page from rewrite

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -36,7 +36,7 @@ http {
   server {
     listen 80 default_server;
     server_name "";
-    rewrite  ^/$  /ESL/index.jsf  permanent;
+    rewrite  ^/$  /index.jsf  permanent;
     
     location / {
       proxy_pass                http://esl:8091;
