--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -37,6 +37,14 @@ http {
     listen 80 default_server;
     server_name "";
     rewrite  ^/$  /index.jsf  permanent;
+
+    proxy_set_header X-Real-IP  $remote_addr;
+    proxy_set_header X-Forwarded-For $remote_addr;
+    proxy_set_header Host $host;
+    proxy_set_header X-Forwarded-Host $host;
+    proxy_set_header X-Forwarded-Server $host;
+
+    proxy_cookie_path ~*^/.* /;
     
     location / {
       proxy_pass                http://esl:8091;
