add proxy for static resources server

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -28,6 +28,14 @@ http {
   }
 
   server {
+      listen 80;
+      server_name static.*;
+      location / {
+        proxy_pass              http://esl-nginx:8092;
+      }
+    }
+
+  server {
     listen 80;
     server_name funfunspell.com;
     return 301 $scheme://www.funfunspell.com$request_uri;
