--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -58,5 +58,21 @@ http {
       proxy_pass                http://esl:8091;
     }
   }
+
+  server {
+    listen 443 ssl;
+    server_name squote.*;
+
+    ssl_certificate           /usr/cert;
+    ssl_certificate_key       /usr/certkey;
+
+    location / {
+      proxy_set_header        Host $host;
+      proxy_set_header        X-Real-IP $remote_addr;
+      proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header        X-Forwarded-Proto $scheme;
+      proxy_pass              http://squote:8090;
+     }
+   }
 }
 
